<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="15dp"
    android:layout_marginBottom="5dp"
    app:cardBackgroundColor="@color/dark_blue"
    app:cardCornerRadius="4dp"
    app:cardElevation="7dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardRootView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:fontFamily="@font/helvetica"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/main_title" />





        <TextView
            android:id="@+id/corona_cases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/helvetica"
            android:textColor="@color/yellow"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/corona_cases_tv"
            app:layout_constraintStart_toStartOf="@+id/corona_cases_tv"
            app:layout_constraintTop_toBottomOf="@+id/header"
            android:text="-"/>

        <TextView
            android:id="@+id/corona_cases_tv"
            style="@style/HeadingTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/coronca_casis"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/corona_cases" />

        <TextView
            android:id="@+id/deathCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/helvetica"
            android:textColor="@color/red"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/header"
            android:text="-"/>

        <TextView
            android:id="@+id/textView5"
            style="@style/HeadingTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            android:text="@string/deaths"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deathCount" />

        <TextView
            android:id="@+id/recoveredCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/helvetica"
            android:textColor="@color/green"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/recovered_tv"
            app:layout_constraintStart_toStartOf="@+id/recovered_tv"
            app:layout_constraintTop_toBottomOf="@+id/header"
            android:text="-"/>


        <TextView
            android:id="@+id/recovered_tv"
            style="@style/HeadingTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/recovered"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/corona_cases_tv"
            app:layout_constraintTop_toBottomOf="@+id/recoveredCount" />





    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>